Prevent scroll from overflow on container size too small

--- a/gui/src/Body/styles/body.scss
+++ b/gui/src/Body/styles/body.scss
@@ -1,6 +1,7 @@
 @import '../../variables';
 
 .main-section {
+  height: 100%;
   padding-top:$small;
   overflow: auto;
   .content {
